--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <option value="Astronaut.glb">愛ㄙ安特</option>
     <option value="buddha.glb">半袋哈</option>
     <option value="stacy_lightweight.glb">ㄕ黛西</option>
-    <option value="2025_3_14.glb">誰是最棒的小蛋糕</option>
+    <option value="2025_3_19.glb">毛毛宇</option>
   </select>
 
   <script>
@@ -61,8 +61,8 @@
       });
     }
 
-    // 預設載入 2025_3_14.glb 模型
-    loadModel("2025_3_14.glb");
+    // 預設載入 2025_3_19.glb 模型
+    loadModel("2025_3_19.glb");
 
     // 監聽下拉選單，點選後載入對應模型
     const modelSelect = document.getElementById('modelSelect');
